--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Romi\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/Users/martinbordon/Library/Application Support/NetBeans/12.5/build.properties
