--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.mariadb-java-client-2.3.0.jar=/home/pablo/Documentos/ULP/Material Teorico/Lab 1/Practico/org.mariadb.jdbc.Driver.jar
-user.properties.file=/home/pablo/.netbeans/8.2/build.properties
+user.properties.file=/Users/martinbordon/Library/Application Support/NetBeans/12.5/build.properties
