--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\Romi\\Desktop\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\Romi\\Desktop\\mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0.jar-1=C:\\Users\\Romi\\Desktop\\mariadb-java-client-2.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-2.3.0.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mariadb-java-client-2.3.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
