--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,7 @@
 compile.on.save=true
+file.reference.jcalendar-1.4.jar=/Users/martinbordon/Downloads/jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0.jar=/home/pablo/Documentos/ULP/Material Teorico/Lab 1/Practico/org.mariadb.jdbc.Driver.jar
+file.reference.mariadb-java-client-2.3.0.jar-1=/Users/martinbordon/Downloads/mariadb-java-client-2.3.0.jar
 user.properties.file=/home/pablo/.netbeans/8.2/build.properties
-file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\Romi\\Desktop\\mariadb-java-client-2.3.0.jar
-user.properties.file=C:\\Users\\Romi\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.mariadb-java-client-2.3.0.jar=/Users/martinbordon/Downloads/mariadb-java-client-2.3.0.jar
+user.properties.file=/Users/martinbordon/Library/Application Support/NetBeans/12.5/build.properties
