--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,15 @@ file.reference.jcalendar-1.4.jar=C:\\Users\\Romi\\Desktop\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\Romi\\Desktop\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-1=C:\\Users\\Romi\\Desktop\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-2=C:\\Users\\Romi\\Desktop\\mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0.jar-3=C:\\Users\\Romi\\Desktop\\mariadb-java-client-2.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-2.3.0.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mariadb-java-client-2.3.0.jar-1}:\
-    ${file.reference.mariadb-java-client-2.3.0.jar-2}
+    ${file.reference.mariadb-java-client-2.3.0.jar-2}:\
+    ${file.reference.mariadb-java-client-2.3.0.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
