--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,7 @@ dist.jar=${dist.dir}/TorneoTenis.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\Romi\\Desktop\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\Romi\\Desktop\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\Romi\\Desktop\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-1=C:\\Users\\Romi\\Desktop\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-2=C:\\Users\\Romi\\Desktop\\mariadb-java-client-2.3.0.jar
@@ -43,7 +44,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mariadb-java-client-2.3.0.jar-1}:\
     ${file.reference.mariadb-java-client-2.3.0.jar-2}:\
-    ${file.reference.mariadb-java-client-2.3.0.jar-3}
+    ${file.reference.mariadb-java-client-2.3.0.jar-3}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
