--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
 compile.on.save=true
-file.reference.jcalendar-1.4.jar=/Users/martinbordon/Downloads/jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Romi\\Desktop\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0.jar=/home/pablo/Documentos/ULP/Material Teorico/Lab 1/Practico/org.mariadb.jdbc.Driver.jar
 file.reference.mariadb-java-client-2.3.0.jar-1=/home/pablo/Documentos/ULP/Material Teorico/Lab 1/Practico/org.mariadb.jdbc.Driver.jar
 file.reference.mariadb-java-client-2.3.0.jar-2=/home/pablo/Documentos/ULP/Material Teorico/Lab 1/Practico/org.mariadb.jdbc.Driver.jar
 user.properties.file=/home/pablo/.netbeans/8.2/build.properties
-file.reference.mariadb-java-client-2.3.0.jar=/home/pablo/Documentos/ULP/Material Teorico/Lab 1/Practico/org.mariadb.jdbc.Driver.jar
-user.properties.file=/home/pablo/.netbeans/8.2/build.properties
+file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\Romi\\Desktop\\mariadb-java-client-2.3.0.jar
+user.properties.file=C:\\Users\\Romi\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
