--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,10 +33,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\Romi\\Desktop\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\Romi\\Desktop\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-2=C:\\Users\\Romi\\Desktop\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\Romi\\Desktop\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-1=C:\\Users\\Romi\\Desktop\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-2=C:\\Users\\Romi\\Desktop\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-3=C:\\Users\\Romi\\Desktop\\mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0.jar-4=C:\\Users\\Romi\\Desktop\\mariadb-java-client-2.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -45,7 +47,10 @@ javac.classpath=\
     ${file.reference.mariadb-java-client-2.3.0.jar-1}:\
     ${file.reference.mariadb-java-client-2.3.0.jar-2}:\
     ${file.reference.mariadb-java-client-2.3.0.jar-3}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jcalendar-1.4.jar-2}:\
+    ${file.reference.mariadb-java-client-2.3.0.jar-4}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -74,7 +79,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Data.Main
+main.class=Vistas.Menu
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
