--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,12 @@
 compile.on.save=true
-file.reference.jcalendar-1.4.jar=/Users/martinbordon/Downloads/jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-1=/Users/martinbordon/Downloads/jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar=/home/pablo/Documentos/Proyectos /TorneoFinal(19-02-22)/TorneoFinal/TorneoTenis/jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=/home/pablo/Documentos/Proyectos /TorneoFinal(19-02-22)/TorneoFinal/TorneoTenis/jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-2=/home/pablo/Documentos/Proyectos /TorneoFinal(19-02-22)/TorneoFinal/TorneoTenis/jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0.jar=/home/pablo/Documentos/ULP/Material Teorico/Lab 1/Practico/org.mariadb.jdbc.Driver.jar
-file.reference.mariadb-java-client-2.3.0.jar-1=/Users/martinbordon/Downloads/mariadb-java-client-2.3.0.jar
-file.reference.mariadb-java-client-2.3.0.jar-2=/Users/martinbordon/Downloads/mariadb-java-client-2.3.0.jar
-file.reference.mariadb-java-client-2.3.0.jar-3=/Users/martinbordon/Downloads/mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0.jar-1=/home/pablo/Documentos/Proyectos /TorneoFinal(19-02-22)/TorneoFinal/TorneoTenis/mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0.jar-2=/home/pablo/Documentos/Proyectos /TorneoFinal(19-02-22)/TorneoFinal/TorneoTenis/mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0.jar-3=/home/pablo/Documentos/Proyectos /TorneoFinal(19-02-22)/TorneoFinal/TorneoTenis/mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0.jar-4=/home/pablo/Documentos/Proyectos /TorneoFinal(19-02-22)/TorneoFinal/TorneoTenis/mariadb-java-client-2.3.0.jar
 user.properties.file=/home/pablo/.netbeans/8.2/build.properties
-file.reference.mariadb-java-client-2.3.0.jar=/Users/martinbordon/Downloads/mariadb-java-client-2.3.0.jar
-user.properties.file=C:\\Users\\Romi\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.mariadb-java-client-2.3.0.jar=/home/pablo/Documentos/Proyectos /TorneoFinal(19-02-22)/TorneoFinal/TorneoTenis/mariadb-java-client-2.3.0.jar
+user.properties.file=/home/pablo/.netbeans/8.2/build.properties
